Se puede buscar una direccion con un input externo

--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
     </header>
     <body>
         <div id="mapid" class="cuadro_mapa"></div>
+        <input type="text" id="direccion" class="cuadro_mapa">
+        <button id="buscar_direccion" class="cuadro_mapa">Buscar</button>
         <!--
         <div class="container">
             <div id="mapid" class="cuadro_mapa"></div>
