Probando ubicacion en celular v2

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         <div id="mapid" class="cuadro_mapa"></div>
         <input type="text" id="direccion" class="cuadro_mapa">
         <button id="buscar_direccion" class="cuadro_mapa">Buscar</button>
+        <input id="localizar" type="button" value="Locate me!" >
         <!--
         <div class="container">
             <div id="mapid" class="cuadro_mapa"></div>
