Volvi al index original pero cambiando a https v2

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <video id="video"></video>
             <button id="startbutton">Take photo</button>
             <canvas id="canvas"></canvas>
-            <img src="http://placekitten.com/g/320/261" id="photo" alt="photo">
+            <img src="https://placekitten.com/g/320/261" id="photo" alt="photo">
             
         </div>
         -->
