Probando sacar foto

--- a/index.html
+++ b/index.html
@@ -61,7 +61,12 @@
         <div id="mapid" class="cuadro_mapa"></div>
         <input type="text" id="direccion" class="cuadro_mapa">
         <button id="buscar_direccion" class="cuadro_mapa">Buscar</button>
-        <input id="localizar" type="button" value="Locate me!" >
+        <input id="localizar" type="button" value="Localizar" >
+        <br>
+        <video id="video"></video>
+        <button id="startbutton">Take photo</button>
+        <canvas id="canvas"></canvas>
+        <img src="https://placekitten.com/g/320/261" id="photo" alt="photo">
         <!--
         <div class="container">
             <div id="mapid" class="cuadro_mapa"></div>
